[package]
name = "clock"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.20.0"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
png = "0.17.8"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_repr = "0.1.10"
tokio = { version = "1.23.0", features = ["macros"] }
